Criação de manutenção de Produtos e Cidades, além de ajustes na manutenção de marcas.

--- a/web/templates/template.xhtml
+++ b/web/templates/template.xhtml
@@ -21,6 +21,8 @@
                             <p:menuitem value="Estados" action="#{controleEstado.listar()}" ajax="false" />
                             <p:menuitem value="Marcas" action="#{controleMarca.listar()}" ajax="false" />
                             <p:menuitem value="Grupos" action="#{controleGrupo.listar()}" ajax="false" />
+                            <p:menuitem value="Cidades" action="#{controleCidade.listar()}" ajax="false" />
+                            <p:menuitem value="Produtos" action="#{controleProduto.listar()}" ajax="false" />
                         </p:submenu>
                     </p:menu>
                 </h:form>
