Criação de controle de entrada e de venda, além de itens de entrada e de venda. Criação de conversores para diversas classes.

--- a/web/templates/template.xhtml
+++ b/web/templates/template.xhtml
@@ -23,6 +23,8 @@
                             <p:menuitem value="Grupos" action="#{controleGrupo.listar()}" ajax="false" />
                             <p:menuitem value="Cidades" action="#{controleCidade.listar()}" ajax="false" />
                             <p:menuitem value="Produtos" action="#{controleProduto.listar()}" ajax="false" />
+                            <p:menuitem value="Entradas" action="#{controleEntrada.listar()}" ajax="false" />
+                            <p:menuitem value="Vendas" action="#{controleVenda.listar()}" ajax="false" />
                         </p:submenu>
                     </p:menu>
                 </h:form>
